2015-07-08  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/action_sequence_selector.h:
	* src/qt4/action_sequence_tree_view.cpp:
	* src/qt4/action_sequence_tree_view.h:
	- 評価値を編集した行動列のみが訓練データとして記録されるように変更

2015-07-06  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/action_sequence_selector.h:
	* src/qt4/action_sequence_tree_view.cpp:
	* src/qt4/action_sequence_tree_view.h:
	- ドラッグ操作によるランクの並び替えを実装。評価値は上下２つの平均
	値に設定される。端の場合は+1または-1。

	* src/qt4/action_sequence_tree_view.cpp:
	* src/qt4/action_sequence_tree_view.h:
	* src/qt4/Makefile.am:
	* src/qt4/action_sequence_selector.cpp:
	- ドラッグ操作準備のために一覧表示のウィジェットを新規クラスへ分離

	* src/qt4/action_sequence_selector.cpp:
	- 編集済みランクの自動セーブ機能を追加

	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/action_sequence_selector.h:
	- 評価値のセルをダブルクリックすることで評価値を編集可能に変更
	- 表示中の行動列一覧の評価値と特徴ベクトルをSVMRank用の訓練データ
	としてファイル保存する機能を追加
	- 行動内容のセルをダブルクリックすることで行動列の詳細ダイアログの
	表示するように変更

2015-06-30  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/model/action_sequence_description.h:
	* src/model/action_sequence_log_parser.cpp:
	* src/qt4/action_sequence_selector.cpp:
	- ランク情報を別途読み込む処理を追加

2015-06-26  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/action_sequence_selector.h:
	- ウィジェット初期化処理の整理
	- コンテキストメニューの追加．内部の処理は未実装

	* src/qt4/debug_message_window.cpp:
	* src/qt4/debug_message_window.h:
	- オフライン実行のための起動スクリプトをダイアログで選択、終了後に
	設定ファイルへ保存する機能を追加

2014-06-18  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/field_canvas.cpp:
	- EvaluationWindowを誤って使用しないように，中ボタンクリックのメ
	ニューを無効化

	* src/qt4/debug_message_window.cpp:
	- 解像度低目のモニタ用に，DebugMessageWindowのデフォルトサイズを
	800x600へ変更

2013-06-17  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/model/action_sequence_description.h:
	* src/model/action_sequence_log_parser.cpp:
	* src/qt4/debug_log_painter.cpp:
	- 行動列描画時に各行動の安全レベルと評価値を文字で描画する機能を追加
